--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/62048a3e000000000102aab7";
+window.location.href="https://www.xiaohongshu.com/user/profile/5ab1d54c11be1027f5a94023?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1645677309";
 
 </script>
 
