--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/61761e540000000021039a56";
+window.location.href="https://www.xiaohongshu.com/user/profile/5cfe187c000000001001e8ae?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1645681208";
 
 </script>
 
