--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/61761e540000000021039a56";
+window.location.href="https://www.xiaohongshu.com/user/profile/5727f4336a6a696845a50b07?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1645707405";
 
 </script>
 
