--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5a446681e8ac2b7bb78f8fb0?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1645932362";
+window.location.href="https://www.xiaohongshu.com/discovery/item/62174d8d000000002103691f";
 
 </script>
 
