--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/62148f320000000021037377";
+window.location.href="https://www.xiaohongshu.com/discovery/item/621a6abf000000002103a961?xhsshare=WeixinTimeLine&appuid=5fa102280000000001003043&apptime=1645968733";
 
 </script>
 
