--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/discovery/item/620f701a000000002103e485";
+window.location.href="https://xueqiu.com/4614347964/211597838";
 
 </script>
 
