--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://xueqiu.com/4614347964/211597838";
+window.location.href="https://www.xiaohongshu.com/user/profile/5a6dfca411be1056a26e3ab4?xhsshare=CopyLink&appuid=5a6dfca411be1056a26e3ab4&apptime=1648180452";
 
 </script>
 
