--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/617775750000000002022403?xhsshare=WeixinSession&appuid=60b98dbf000000002002888f&apptime=1648513256";
+window.location.href="https://xueqiu.com/4424781333/208373726";
 
 </script>
 
