--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5fd35ed300000000010025d6?xhsshare=WeixinSession&appuid=5b3044f9f7e8b912351da8ee&apptime=1648537573";
+window.location.href="https://blitv.github.io/b2.tv.github.io/";
 
 </script>
 
