--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://blitv.github.io/b2.tv.github.io/";
+window.location.href="https://b23.tv/3J8czHi";
 
 </script>
 
