--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://b23.tv/3J8czHi";
+window.location.href="https://www.xiaohongshu.com/user/profile/59cce669b1da14769e2db47d?xhsshare=WeixinSession&appuid=5b3044f9f7e8b912351da8ee&apptime=1649589075";
 
 </script>
 
