--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://xcxzm-9g5aooloa518c903-1316474159.tcloudbaseapp.com/3.html?username=gh_52be748ce5b7?path=pages/secondary/author/index.html?id=5d6cc43e0000000001003e88&appuid=5dff12700000000001004a37&mpoid=oPPUS5R5KY7aj-Mhn2ke52z5sJBc&share=true";
+window.location.href="https://www.xiaohongshu.com/user/profile/5d6cc43e0000000001003e88?xhsshare=WeixinSession&appuid=5dff12700000000001004a37&apptime=1676340049";
 
 </script>
 
