--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5bb3792c9cb8ac0001cdd974?xhsshare=WeixinSession&appuid=60d80d570000000001000be9&apptime=1676522354";
+window.location.href="https://www.xiaohongshu.com/user/profile/5e5f735c000000000100b4ae?xhsshare=CopyLink&appuid=5fcedc090000000001005641&apptime=1676444237";
 
 </script>
 
