--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/5e5f735c000000000100b4ae?xhsshare=CopyLink&appuid=5fcedc090000000001005641&apptime=1676444237";
+window.location.href="https://www.xiaohongshu.com/user/profile/612874bf000000002002dc79?xhsshare=WeixinSession&appuid=5fa102280000000001003043&apptime=1681973096";
 
 </script>
 
