--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <script>
 
-window.location.href="https://www.xiaohongshu.com/user/profile/616516140000000002026ee5?xhsshare=WeixinSession&appuid=5fa102280000000001003043&apptime=1682070020";
+window.location.href="https://www.xiaohongshu.com/user/profile/6094f0ad0000000001000faa?xhsshare=CopyLink&appuid=5fcedc090000000001005641&apptime=1682073051";
 
 </script>
 
