--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5e4fb0dc0000000001009b0b?xhsshare=CopyLink&appuid=5fcedc090000000001005641&apptime=1682168935";
+window.location.href=https://www.xiaohongshu.com/user/profile/59d1c5c951783a65ea3e6c81?xhsshare=CopyLink&appuid=63dca73900000000280189b2&apptime=1680062264";
 </script>
 
 <body>
