--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/62134b18000000001000c962?xhsshare=CopyLink&appuid=5ae80e2ae8ac2b42af004130&apptime=1684325588";
+window.location.href="https://www.xiaohongshu.com/user/profile/5c1773d8000000000700ffd6?xhsshare=WeixinSession&appuid=5fa102280000000001003043&apptime=1684634272";
 </script>
 
 <body>
