--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5c1773d8000000000700ffd6?xhsshare=WeixinSession&appuid=5fa102280000000001003043&apptime=1684634272";
+window.location.href="https://www.xiaohongshu.com/user/profile/5ba996fc7fdbea0001658609?xhsshare=CopyLink&appuid=5c97652200000000110023f7&apptime=1684640258";
 </script>
 
 <body>
