--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/6082199b00000000010052f5?xhsshare=CopyLink&appuid=5c97652200000000110023f7&apptime=1684739914";
+window.location.href="https://www.xiaohongshu.com/explore/6465f6eb000000001203ea01?app_platform=ios&app_version=7.73.1&share_from_user_hidden=true&type=normal&xhsshare=CopyLink&appuid=604dea8500000000010009d9&apptime=1684819087";
 </script>
 
 <body>
