--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5a1277534eacab35e828523e?xhsshare=WeixinSession&appuid=5e1fc4880000000001002aae&apptime=1685684810";
+window.location.href="https://www.xiaohongshu.com/user/profile/5b74458232ad61000127c2b5";
 </script>
 
 <body>
