--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/64020dfc000000001f0335d6";
+window.location.href="https://www.xiaohongshu.com/user/profile/5f3242c6000000000101dc09?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1686145620";
 </script>
 
 <body>
