--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5f3242c6000000000101dc09?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1686145620";
+window.location.href="https://www.xiaohongshu.com/user/profile/5ad2c56e6b58b7233172d899";
 </script>
 
 <body>
