--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5ad2c56e6b58b7233172d899";
+window.location.href="https://www.xiaohongshu.com/user/profile/59ca8b9d44363b1a784acfe5?xhsshare=CopyLink&appuid=59ca8b9d44363b1a784acfe5&apptime=1686197791";
 </script>
 
 <body>
