--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5afee1d9f7e8b951fe4b59cf";
+window.location.href="https://www.xiaohongshu.com/user/profile/5a5f74ee11be10318fd26a3b?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1686832956";
 </script>
 
 <body>
