--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/60881ddd000000000100706b?xhsshare=CopyLink&appuid=5b5bfcb56b58b72abd02788c&apptime=1686639803";
+window.location.href="https://www.xiaohongshu.com/user/profile/610951450000000001000b1d";
 </script>
 
 <body>
