--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5fd9f6b7000000000101f072";
+window.location.href="https://www.xiaohongshu.com/user/profile/5c3763f1000000000603e96e?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1687444419";
 </script>
 
 <body>
