--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5c3763f1000000000603e96e?xhsshare=CopyLink&appuid=5fa102280000000001003043&apptime=1687444419";
+window.location.href="https://www.xiaohongshu.com/user/profile/5a0b88454eacab16c80a7009?xhsshare=WeixinSession&appuid=5fa102280000000001003043&apptime=1687672971";
 </script>
 
 <body>
