--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/592176175e87e7161b55031a";
+window.location.href="https://www.xiaohongshu.com/user/profile/603edca1000000000100aa81?xhsshare=CopyLink&appuid=603edca1000000000100aa81&apptime=1687845323";
 </script>
 
 <body>
