--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5f3e11cc000000000101e1b4?xhsshare=CopyLink&appuid=62f8871a000000001f017e40&apptime=1688949474";
+window.location.href="https://www.xiaohongshu.com/user/profile/5f71fa1f0000000001001bdc";
 </script>
 
 <body>
