--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/603edca1000000000100aa81?xhsshare=CopyLink&appuid=603edca1000000000100aa81&apptime=1688950082";
+window.location.href="https://www.xiaohongshu.com/user/profile/64364c72000000000e01e86e";
 </script>
 
 <body>
