--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/606817570000000001002507?xhsshare=CopyLink&appuid=64a192d9000000001f0043e5&apptime=1689164020";
+window.location.href="https://www.xiaohongshu.com/user/profile/5ffc501a000000000100badc";
 </script>
 
 <body>
