--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <script>
-window.location.href="https://www.xiaohongshu.com/user/profile/5ffc501a000000000100badc";
+window.location.href="https://d.dbdb.vip/s/fxDeEH6";
 </script>
 
 <body>
